--- a/Pages/3rd-restaurant.html
+++ b/Pages/3rd-restaurant.html
@@ -25,7 +25,7 @@
                 <div class="menu-container">
                     <div class="restaurant-name">
                         <h1 class="second-title">A la française</h1>
-                        <a href=""><i class="far fa-heart two"></i></a>
+                        <i class="far fa-heart two"></i>
                     </div>
                     <div class="menu">
                         <div class="entrees">
