--- a/Pages/index.html
+++ b/Pages/index.html
@@ -13,6 +13,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
+          <div class="loader">
+            <span></span>
+          </div>
         <div class="container">
         <header>
                 <img class="logo" src="../images/logo/ohmyfood.png" alt="Logo_ohmyfood">
@@ -68,9 +71,9 @@
                             <a href="../Pages/1st-restaurant.html" id="1st-restaurant"><img class="grid-image" src="../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La_palette_du_gout"></a>
                                 <div class="overlay">
                                     <div class="heart-and-title">
-                                        <i class="fa fa-heart" aria-hidden="true"></i>
                                         <h3 class="caption">La palette du goût</h3>
                                         <i class="far fa-heart" aria-hidden="true"></i>
+                                        <i class="fa fa-heart" aria-hidden="true"></i>
                                     </div>
                                         <p class="p-caption">Ménilmontant</p>
                                 </div>
@@ -82,9 +85,9 @@
                             <a href="../Pages/2nd-restaurant.html" id="2nd-restaurant"><img class="grid-image" src="../images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La_note_enchantée"></a>
                                 <div class="overlay">
                                     <div class="heart-and-title">
-                                        <i class="fa fa-heart" aria-hidden="true"></i>
                                         <h3 class="caption">La note enchantée</h3>
                                         <i class="far fa-heart" aria-hidden="true"></i>
+                                        <i class="fa fa-heart" aria-hidden="true"></i>
                                     </div>
                                     <p class="p-caption">Charonne</p>
                                 </div>
@@ -95,9 +98,9 @@
                             <a href="../Pages/3rd-restaurant.html" id="3rd-restaurant"><img class="grid-image" src="../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="A_la_française"></a>
                                 <div class="overlay">
                                     <div class="heart-and-title">
-                                        <i class="fa fa-heart" aria-hidden="true"></i>
                                         <h3 class="caption">A la française</h3>
                                         <i class="far fa-heart" aria-hidden="true"></i>
+                                        <i class="fa fa-heart" aria-hidden="true"></i>
                                     </div>
                                     <p class="p-caption">Cité Rouge</p>
                                 </div>
@@ -108,9 +111,9 @@
                             <a href="../Pages/4rth-restaurant.html" id="4rth-restaurant"><img class="grid-image" src="../images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le_délice_des_sens"></a>
                                 <div class="overlay">
                                     <div class="heart-and-title">
-                                        <i class="fa fa-heart" aria-hidden="true"></i>
                                         <h3 class="caption">Le délice des sens</h3>
                                         <i class="far fa-heart" aria-hidden="true"></i>
+                                        <i class="fa fa-heart" aria-hidden="true"></i>
                                     </div>
                                     <p class="p-caption">Folie-Méricourt</p>
                                 </div>
